--- a/pillar.example
+++ b/pillar.example
@@ -1,6 +1,6 @@
 medicaloffice:
-  your: mother
-  is:
-  - fat
-  - old 
-  
+  source: https://download.indamed.de/download.php?webcode=voll
+
+
+  firebird_db:
+    source: https://github.com/FirebirdSQL/firebird/releases/download/R3_0_5/Firebird-3.0.5.33220_0_x64.exe
