--- a/requirements.txt
+++ b/requirements.txt
@@ -3,20 +3,20 @@ attrs
 binaryornot
 certifi
 chardet
-click
+clic
 cookiecutter
 future
 idna
 Jinja2
-jinja2
-MarkupSafe
+jinja2-time
+MarkupSaf
 pluggy
 poyo
 py
 pytest
-pytest
-pytest
-python
+pytest-html
+pytest-metadata
+python-dateutil
 requests
 six
 testinfra
