--- a/medicaloffice/config/defaults.yaml
+++ b/medicaloffice/config/defaults.yaml
@@ -1,7 +1,7 @@
-
 medicaloffice:
-  source: https://download.indamed.de/download.php?webcode=voll
+  # https://download.indamed.de/download.php?webcode=voll
+  base:
+    source: https://assets.bienert.tech/minio/public-repo/medical-office/base/moupd-0.0.0.exe
 
-
-  firebird_db:
-    source: https://github.com/FirebirdSQL/firebird/releases/download/R3_0_5/Firebird-3.0.5.33220_0_x64.exe
+  update:
+    source: https://assets.bienert.tech/minio/public-repo/medical-office/updates/moupd13944.exe
